# ds4to360xboxdrv

./: .SRCINFO  .gitignore  99-ds4-xboxdrv.rules  99-pnp.rules  LICENSE  MIGRATION.md  PKGBUILD  README.md  RESEARCH_SUMMARY.md  build-all-packages.sh  ds4-xboxdrv.service  ds4-xboxdrv.sh  ds4-xboxdrv.txt  ds4to360-gui.desktop  ds4to360xboxdrv.spec  install.sh  migration.sh  pnp-user.service.template  pnp.conf.example  pnp.desktop  pnp.service  pnp.spec  pyproject.toml  uninstall.sh
Multiple controller support/: ds4-xboxdrv.sh
debian/: changelog  control  copyright  rules
src/: backend.py  gui.py
src/ds4to360/: backend.py  gui.py
src/ds4to360/core/: controller.py  manager.py
src/ds4to360/gui/: controller_widget.py  main_window.py
src/ds4to360/services/: config_manager.py  process_runner.py  steam_detector.py
src/pnp/: backend.py  config.jsonc  gui.py  main.py  pnp-steam-run.sh
src/pnp/core/: controller.py  device_monitor.py  manager.py  virtual_controller.py
src/pnp/diagnostics/: engine.py  polkit.py
src/pnp/gui/: __init__.py  backend.py  controller_widget.py  main_window.py  tray.py
src/pnp/gui/qml/: BluetoothPage.qml  DiagnosticPage.qml  GameLibraryPage.qml  KirigamiBluetoothPage.qml  LogPage.qml  MonitorPage.qml  NonSteamPage.qml  SettingsPage.qml  StandardBluetoothPage.qml  TesterPage.qml  main.qml
src/pnp/helpers/: fix-bluetooth  install-udev-rules  load-uinput  reload-services  steam_library.py
src/pnp/polkit/: org.pnp.policy
src/pnp/services/: bluetooth_scanner.py  config_manager.py  game_detector.py  game_scanner.py  nonsteam_manager.py  process_runner.py  profile_downloader.py  steam_detector.py
