[project]
name = "pnp"
version = "5.2.0"
description = "PNP (PS NOT PS) – PlayStation to Xbox controller emulator for Linux"
authors = [
    { name = "pakrohk", email = "pakrohk@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.5.0",
    "loguru>=0.7.0",
    "evdev>=1.6.0",
    "pyudev>=0.24.0",
    "commentjson>=0.9.0",
    "pyxdg>=0.28",
    "requests",
    "vdf",
]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/pakrohk/pnp"
Repository = "https://github.com/pakrohk/pnp"
"Bug Tracker" = "https://github.com/pakrohk/pnp/issues"
[project.scripts]
pnp = "pnp.main:main"
pnp-gui = "pnp.main:main"
pnp-backend = "pnp.main:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = [
    "src/pnp",
    "99-pnp.rules",
    "pnp.service",
    "pnp.desktop",
    "pnp.conf.example",
    "LICENSE",
    "README.md",
]
exclude = [
    "src/99-pnp.rules",
]
[tool.hatch.build.targets.wheel]
packages = ["src/pnp"]
artifacts = ["src/pnp/helpers/*"]
[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "installer>=1.0.1",
    "mypy>=2.1.0",
    "pylint>=4.0.6",
]
[tool.uv]
managed = true
